# tictactoe

./: tictactoe.cabal  tictactoe2.cabal
app/: Main.hs
src/: Core.hs  TicTacToe.hs
src/TicTacToe/: AiInterface.hs  Core.hs  Domain.hs  HumanInterface.hs
src/TicTacToe/Core/: Internals.hs
src/TicTacToe/HumanInterface/: Internals.hs
test/: CoreSpec.hs
test/TicTacToe/: AiInterfaceSpec.hs  CoreSpec.hs  TestCommon.hs
test/TicTacToe/Core/: InternalsSpec.hs
test/TicTacToe/HumanInterface/: InternalsSpec.hs
