name:                tictactoe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tictactoe2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToe.Core
                     , TicTacToe.HumanInterface
                     , TicTacToe.Domain
                     , TicTacToe.AiInterface
                     , TicTacToe.Core.Internals
                     , TicTacToe.HumanInterface.Internals
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , split
                     , safe
                     , hmatrix
                     , random
                     , random-shuffle
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-name-shadowing
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-patterns
    -fwarn-overlapping-patterns
    -fwarn-incomplete-record-updates
    -fwarn-missing-signatures
    -fwarn-monomorphism-restriction
    -fwarn-orphans
    -fforce-recomp

executable tictactoe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tictactoe
  default-language:    Haskell2010

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , tictactoe
               , hspec
               , QuickCheck
  hs-source-dirs: test
  default-language: Haskell2010
